[gd_scene load_steps=3 format=3 uid="uid://b6i5kfi2qod0m"]

[ext_resource type="Script" uid="uid://22hvbfk51nmc" path="res://ui/pause_menu.gd" id="1_50142"]
[ext_resource type="PackedScene" uid="uid://cuhdbb7cxn701" path="res://ui/scene_select_ui.tscn" id="2_ejwgg"]

[node name="pause menu" type="Control"]
process_mode = 3
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_50142")

[node name="PanelContainer" type="PanelContainer" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -237.5
offset_top = -186.5
offset_right = 237.5
offset_bottom = 186.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 40
alignment = 1

[node name="resume" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "resume"

[node name="change scene" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "change scene"

[node name="restart" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "restart"

[node name="quit" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "quit"

[node name="Scene Select" parent="." instance=ExtResource("2_ejwgg")]
layout_mode = 1

[connection signal="pressed" from="PanelContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/change scene" to="." method="_on_change_scene_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
